# TinySoundV2

./: .gitignore  README.md
Code/TinySound/: CMakeLists.txt  TS_audio.c  TS_audio.h  TS_fat.c  TS_fat.h  TS_flash.c  TS_flash.h  TS_shell.c  TS_shell.h  TS_sine.c  TS_sine.h  TinySound.c  audio_i2s.pio  custom_linker_script.ld  defines_includes.txt  generate_vscode_config.py  mass_storage_init.c  modify_uf2.py  usb_descriptors.c  wave_header.h
Code/TinySound/board/: tinysound_v2.h
Code/TinySound/ff15/source/: diskio.c  ffconf.h
Code/TinySound/usb/: flash_functions.c  flash_functions.h  msc_disk.c  msc_disk.h  tusb_config.h  usb_callbacks.c  usb_descriptors.c
PCB/: TinySound_v2.kicad_pcb  TinySound_v2.kicad_prl  TinySound_v2.kicad_pro  TinySound_v2.kicad_sch  TinySound_v2.pro  TinySound_v2.sch  fp-info-cache  fp-lib-table  sym-lib-table
PCB/Footprints/TinySound.3dshapes/: DFN4.STEP  FC2QFN-10.step  WLP-9.STEP
PCB/Footprints/TinySound.pretty/: FC2QFN-10.kicad_mod  Maxim_WLP-9_1.595x1.415_Layout3x3_P0.4mm_Ball0.27mm_Pad0.25mm_NSMD.kicad_mod  OnSemi_XDFN4-1EP_1.0x1.0mm_EP0.52x0.52mm.kicad_mod  QFN-56_EP_7x7_Pitch0.4mm.kicad_mod  RP2040.kicad_mod  USB_Micro-B_Amphenol_10104110_Horizontal.kicad_mod
PCB/Symbols/: TinySound.dcm  TinySound.kicad_sym  TinySound.lib
PCB/bom/: ibom.html
